| Bug #12217 | "select" test failure when using --ps-protocol | ||
|---|---|---|---|
| Submitted: | 27 Jul 2005 16:43 | Modified: | 27 Jul 2005 20:06 |
| Reporter: | Lenz Grimmer | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | Linux (Linux) |
| Assigned to: | Michael Widenius | CPU Architecture: | Any |
[27 Jul 2005 16:43]
Lenz Grimmer
[27 Jul 2005 16:52]
Lenz Grimmer
Note: This tree was compiled with BUILD/compile-dist
[27 Jul 2005 20:04]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/27660
[27 Jul 2005 20:06]
Michael Widenius
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
