We have also to test 'conds' even if there was no tables. (This is because conds may not be a constant) This bug caused a failure in the test suite for select.test becasue for prepared statements in one case a 'constant sub query' was not regarded as a constant Sanja will as a separate task check if we can fix that the sub query can be recognized as a constant Bug #12217